[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Audio/jump-climb-or-damage-sound-f-95942.wav" type="AudioStream" id=1]
[ext_resource path="res://Characters/RocketTurret.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Turret.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boss.gd" type="Script" id=4]
[ext_resource path="res://Assets/Character/boss.png" type="Texture" id=5]
[ext_resource path="res://Spawner.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 107.778
height = 7.11115

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 0.9, 0.9 )
collision_layer = 9
collision_mask = 9
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 9.53674e-07, 3.8147e-06 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.76837e-07, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Turret" parent="." instance=ExtResource( 3 )]
position = Vector2( -54.4444, 124.444 )

[node name="Turret2" parent="." instance=ExtResource( 3 )]
position = Vector2( 125.556, 0 )

[node name="RocketTurret" parent="." instance=ExtResource( 2 )]
position = Vector2( 55.5556, 124.444 )

[node name="RocketTurret2" parent="." instance=ExtResource( 2 )]
position = Vector2( 55.5556, -124.444 )

[node name="BackTurret" parent="." instance=ExtResource( 3 )]
position = Vector2( -114.444, 0 )

[node name="BackTurret2" parent="." instance=ExtResource( 3 )]
position = Vector2( -55.5556, -125.556 )

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 1.52588e-05 )
